修正推荐技术系统列表的显示格式，增加换行以提升可读性

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div>
         <h2>小组件 | Plugins</h2>
         <ul>
-            <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin-left: 0; display: block;" title="快速链接">!快速链接!</a></li>
+            <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px; display: block;" title="快速链接">!快速链接!</a></li>
             <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">部分链接</a></li>
             <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
         </ul>
@@ -155,7 +155,7 @@
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
-        <p>团队成员评审出推荐技术用系统:<br>{红蓝对抗:Parrotsec,Kali,blackarch;<br>隐私:Tails,Qubes;<br>OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux}</p>
+        <p>团队成员评审出推荐技术用系统:{<br>红蓝对抗:Parrotsec,Kali,blackarch;<br>隐私:Tails,Qubes;<br>OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux<br>}</p>
 
     </div>
 
