调整快速链接的边距样式，以改善页面布局

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div>
         <h2>小组件 | Plugins</h2>
         <ul>
-            <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px; display: block;" title="快速链接">!快速链接!</a></li>
+            <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">!快速链接!</a></li>
             <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">部分链接</a></li>
             <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
         </ul>
