更新MOTD和HTML页面内容，以改善用户体验和信息准确性

--- a/index.html
+++ b/index.html
@@ -46,31 +46,27 @@
         </div>
     <br>
         <div>
-            <h2 id="ju">加聊天室 | JOIN US</h2>
+            <h2 id="ju">交流 | JOIN US</h2>
         <ul>
             <li><a href="#irc">!IRC! [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [#arkfuture_studio]</a></li>
-            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
-            <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
         </ul>
-            <p>聊天消息平台不互通; 平台使用频率从高到底排序; 点击加入</p>     
+            <p>聊天消息平台不互通;点击加入</p>     
             <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>         
         </div>
     <br>
         <div>
             <h2 id="irc">IRC服务 | IRC</h2>
-            <p>默认端口连接不上请切换备用端口连接</p>
-            <p>Default port:[noSSL:6667/SSL:6697]<br>Spare Port:[noSSL:6668-6670/SSL:9999]</p>
+            <p>默认端口:[noSSL:6667/SSL:6697]<br>备用端口:[noSSL:6668-6670/SSL:9999]</p>
         <ul>
-            <li>
-                <a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a> 
-                <a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a> 
-            </li>
+            <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
+            <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
         </ul>
-            <p>加入相关服务后请仔细阅读motd</p>
+            <p style="color: coral;">进入后请仔细阅读motd</p>
+            <p>默认端口连接不上请切换备用端口连接</p>
             <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括有otr插件)</p>
-            <p>请访问我们的github完整代码, 其中有irssi的配置文件</p>
-            <p>欢迎您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>请访问我们的github中完整的INSPIRCD配置文件</p>
+            <p>请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
         </div>
     <br>
         <div>
@@ -109,17 +105,14 @@
     <hr>
 
     <div>
-        <h1 class="tit" id="so">社交 | Social</h1>
+        <h1 class="tit" id="so">社会的 | Social</h1>
     <ul>
-        <p>联系我们</p>
-        <li><a href="https://t.me/arkfuture">Telegram</a></li>
-        <li><a href="https://matrix.org/">Matrix</a></li>
-        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件</a></li>
-        <li><a href="https://arkfuture@iptel.org">iptel.org</a></li>
-        <li><a href="https://arkfuture@xmpp.jp">xmpp.jp</a></li>
+        <p>与运营管理交流</p>
+        <li><a href="https://t.me/arkfuture">Telegram:arkfuture</a></li>
+        <li><a href="#irc">IRC:arkfuture</a></li>
         <p>订阅我们</p>
         <li><a href="https://x.com/arkfuturestudio">X</a></li>
-        <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
+        <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
         <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
     </ul>
     </div>
