--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul>
             <p style="color: coral;">进入后请仔细阅读motd</p>
             <p>默认端口连接不上请切换备用端口连接</p>
-            <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括有otr插件)</p>
+            <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括otr插件)</p>
             <p>请访问我们的github中完整的INSPIRCD配置文件</p>
             <p>请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
         </div>
