更新inspircd配置文件，调整安全设置和连接端口，优化MOTD和规则文本以提升用户体验

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <br>
         <div>
             <h2 id="irc">IRC服务 | IRC</h2>
-            <p>默认端口:[noSSL:6667/SSL:6697]<br>备用端口:[noSSL:6668-6670/SSL:9999]</p>
+            <p>默认端口:[noSSL:6667/SSL:6697]<br>备用端口:[noSSL:6668,6669/SSL:9999]</p>
         <ul>
             <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
