更新index.html中的注释，添加测试链接并格式化感谢信息

--- a/index.html
+++ b/index.html
@@ -170,9 +170,15 @@
 
 </html>
 
-<!--Thanks-->
-<!--ARKFUTURE team/group/studio and Friends-->
-<!--INSPIRCD https://www.inspircd.org/-->
-<!--IRSSI https://irssi.org/-->
-<!--https://hwkj.top/-->
-<!--In the same way, I would like to thank my dearest Ms. Zhang-->
+<!--
+Thanks
+ARKFUTURE team/group/studio and Friends
+INSPIRCD https://www.inspircd.org/
+IRSSI https://irssi.org/
+https://hwkj.top/
+In the same way, I would like to thank my dearest Ms. Zhang
+
+TEST:
+https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/usessh_deb.sh
+
+-->
