更新index.html，将标题“社会的”更改为“Community”

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <hr>
 
     <div>
-        <h1 class="tit" id="so">社会的 | Social</h1>
+        <h1 class="tit" id="so">社会的 | Community</h1>
     <ul>
         <p>与运营管理交流</p>
         <li><a href="https://t.me/arkfuture">Telegram:arkfuture</a></li>
