--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div style="text-align: center;">
-        <h1>ARKFUTURE</h1>
+        <h1 class="LM">ARKFUTURE</h1>
     </div>
 
     <div>
