新增inspircd安装脚本，支持SSL并提供详细安装说明；更新主页链接以反映新脚本

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括otr插件)</p>
             <p>请访问我们的github中完整的INSPIRCD配置文件</p>
             <p>请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p>使用脚本搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/install.sh</p>
-            <p>使用脚本编译搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/make.sh</p>
+            <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/install.sh</p>
+            <p>搭建您自己irc服务器(启用ssl):https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/installssl.sh</p>
         </div>
     <br>
         <div>
