--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
             <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括otr插件)</p>
             <p>请访问我们的github中完整的INSPIRCD配置文件</p>
             <p>请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/install.sh</p>
-            <p>搭建您自己irc服务器(启用ssl):https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/installssl.sh</p>
-        </div>
+            <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/README.md</p>
     <br>
         <div>
             <h2 id="pv">代理 | PROXY & VPN</h2>
