删除关于方舟安全实验室的文档，更新主页链接并新增InspIRCd安装与配置说明页面

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括otr插件)</p>
             <p>请访问我们的github中完整的INSPIRCD配置文件</p>
             <p>请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/README.md</p>
+            <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/HTML/1.markdown.html</p>
     <br>
         <div>
             <h2 id="pv">代理 | PROXY & VPN</h2>
@@ -159,7 +159,7 @@
 <footer>
     <div style="text-align: center;">
         <p>方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
-        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="./ARKFUTURE/ABOUT/other.md">ARK SRCURITY LAB</a>. All rights reserved.</p>
+        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
     </div>
@@ -173,10 +173,6 @@ Thanks
 ARKFUTURE team/group/studio and Friends
 INSPIRCD https://www.inspircd.org/
 IRSSI https://irssi.org/
-https://hwkj.top/
+XiehJ https://hwkj.top/
 In the same way, I would like to thank my dearest Ms. Zhang
-
-TEST:
-https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/usessh_deb.sh
-
 -->
