修正index.html文件中的感谢信息，增加句号以确保语法正确

--- a/index.html
+++ b/index.html
@@ -174,5 +174,5 @@ ARKFUTURE team/group/studio and Friends
 INSPIRCD https://www.inspircd.org/
 IRSSI https://irssi.org/
 XiehJ https://hwkj.top/
-In the same way, I would like to thank my dearest Ms. Zhang
+In the same way, I would like to thank my dearest Ms. Zhang..
 -->
