更新inspircd配置，修改管理员邮箱以确保联系信息准确性；在index.html中添加邮件链接以便用户联系

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <p>与运营管理交流</p>
         <li><a href="https://t.me/arkfuture">Telegram:arkfuture</a></li>
         <li><a href="#irc">IRC:arkfuture</a></li>
+        <li><a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a></li>
         <p>订阅我们</p>
         <li><a href="https://x.com/arkfuturestudio">X</a></li>
         <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
