--- a/ARKFUTURE/HTML/1.markdown.html
+++ b/ARKFUTURE/HTML/1.markdown.html
@@ -1,81 +1,166 @@
-<h1 id="">安装</h1>
-<ul>
-<li>官方deb包安装: <a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/install.sh">https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/install.sh</a></li>
-<li>全插件deb包安装: <a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/installssl.sh">https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/installssl.sh</a></li>
-<li>编译安装：<a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/other/make.sh">https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/other/make.sh</a></li>
-<li>更新配置文件: <a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/config.sh">https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/config.sh</a>
-*</li>
-<li>ARKFUTURE 服务器安装+arkfuture配置(此项目使用了数据库服务,使用了arkfuture专属配置文件,并且使用了ssl): <a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/other/afeconf.sh">https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/other/afeconf.sh</a></li>
-<li><ul>
-<li>我们在测试配置时 会添加<code>&lt;die reason="服务器正在维护，请稍后再启动。"&gt;</code> 标签到服务器配置中 </li></ul></li>
-<li>测试完成后会及时删除, 这时请您稍后再更新</li>
-<li>* 当 InspIRCd 启动时，如果检测到配置文件中存在 <code>&lt;die&gt;</code> 标签，服务器会立即停止启动，并向日志或控制台输出配置中指定的消息。</li>
-</ul>
-<h1 id="-1">问题及相关帮助</h1>
-<ul>
-<li>1 systemctl 问题</li>
-</ul>
-<pre><code>(编译安装后)使用systemctl时出错: 
-
-1.因为 INSPIRCD 工作组就是这样设计的 需要自行添加
-1.1.复制一个并重载 
-https://github.com/inspircd/inspircd/blob/insp4/make/template/inspircd.service
-cp inspircd.service /etc/systemd/system/
-systemctl daemon-reload
-
-2.对于无systemctl文件:
-我们团队直接使用 root用户 来执行 启动inspircd [root@hostname:~# inrpircd]
-并使用 [root@hostname:~# pkill -f inspircd] 来关闭程序
-</code></pre>
-<ul>
-<li>2 各种名词及解释</li>
-</ul>
-<pre><code>NetAdmin：服务器管理
-GlobalOp：服务器操作员
-Helper：帮助员
-管理员配置 都存放在 /etc/inspircd/conf/opers.conf
-</code></pre>
-<ul>
-<li>3 配置相关</li>
-</ul>
-<pre><code>我们所有的模块(插件)配置(包括第三方) 都存放在 /etc/inspircd/conf/modulesconf.conf
-</code></pre>
-<ul>
-<li>4 如果您启用了SSL相关</li>
-</ul>
-<pre><code>配置 /etc/inspircd/conf/modulesconf.conf 中 关于SSL 的配置项目
-并且在 /etc/inspircd/ssl/ 目录中 放入相关CA证书文件
-
-详细配置
-https://docs.inspircd.org/4/modules/ssl_gnutls
-https://docs.inspircd.org/4/modules/ssl_openssl
-
-我们的配置中 使用了 &amp;SSLPath; 这样的定义符号 它会替换 /etc/inspircd/ssl/
-如: &amp;SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
-</code></pre>
-<h1 id="-2">目录和文件说明</h1>
-<pre><code>* 完整的 /etc/inspirc/ 目录应该为: 
-* 如果不是如下样式,请执行 ./config.sh 来重新下载所有配置文件
-* 如果还不懂 请提问给我:2qwn2rrds@mozmail.com
-
-/etc/inspircd
-    --inspircd.conf
-    --ssl/
-    --conf/
-    --txt/
-</code></pre>
-<pre><code>    --inspircd.conf #是inspircd的配置文件
-    --ssl/ #ssl模块及安全证书相关的配置目录(如果要使用ssl请参照https://docs.inspircd.org/4/modules/ssl_openssl 修改)
-    --conf/ #一般模块的配置目录(请参照 https://docs.inspircd.org/4/modules/ 修改)
-    --txt/ #MOTD文档所在的目录 (请按需修改)
-</code></pre>
-<h1 id="other">other目录的说明</h1>
-<ul>
-<li>此目录是其他关于irc的配置</li>
-<li>包括 ircd 及 客户端 和 bot 的相关软件的所有配置</li>
-</ul>
-<h1 id="-3">重要！自己编译安装包 或者使用 直接编译安装</h1>
-<ul>
-<li>直接使用 build.sh 编译全部插件的软件包(ARKFUTURE修改)</li>
-<li>https://github.com/ARKFUTURE/ARKFUTURE.github.io/releases/tag/20250310</li>
-</ul>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>InspIRCd 配置文档 - ARKFUTURE</title>
+    <style>
+        :root {
+            --primary-color: #2c3e50;
+            --secondary-color: #3498db;
+            --code-bg: #f8f9fa;
+            --warning-color: #e74c3c;
+        }
+ 
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f5f6fa;
+        }
+ 
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: 250px 1fr;
+            gap: 30px;
+        }
+ 
+        .nav-section {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 20px;
+        }
+ 
+        .content-section {
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+ 
+        h1, h2, h3 {
+            color: var(--primary-color);
+            margin-top: 1.5em;
+        }
+ 
+        code {
+            background: var(--code-bg);
+            padding: 2px 5px;
+            border-radius: 3px;
+            font-family: "Fira Code", Monaco, monospace;
+        }
+ 
+        pre {
+            background: var(--code-bg);
+            padding: 15px;
+            border-radius: 6px;
+            overflow-x: auto;
+            margin: 20px 0;
+        }
+ 
+        .warning {
+            border-left: 4px solid var(--warning-color);
+            background: #fff3f3;
+            padding: 15px;
+            margin: 20px 0;
+        }
+ 
+        a {
+            color: var(--secondary-color);
+            text-decoration: none;
+        }
+ 
+        a:hover {
+            text-decoration: underline;
+        }
+ 
+        .dir-structure {
+            background: var(--code-bg);
+            padding: 15px;
+            border-radius: 6px;
+            margin: 15px 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <nav class="nav-section">
+            <h2>导航目录</h2>
+            <ul>
+                <li><a href="#installation">安装方法</a></li>
+                <li><a href="#faq">常见问题</a></li>
+                <li><a href="#config">配置说明</a></li>
+                <li><a href="#directory">目录结构</a></li>
+                <li><a href="#important">重要提示</a></li>
+            </ul>
+        </nav>
+ 
+        <div class="content-section">
+            <h1>InspIRCd 服务器配置文档</h1>
+            
+            <h2 id="installation">安装方法</h2>
+            <ul>
+                <li>官方deb包安装: <a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/install.sh"  target="_blank">install.sh</a></li> 
+                <li>全插件deb包安装: <a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/installssl.sh"  target="_blank">installssl.sh</a></li> 
+                <li>编译安装：<a href="https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/other/make.sh"  target="_blank">make.sh</a></li> 
+                <li>ARKFUTURE 定制安装包（含数据库服务和SSL）: 
+                    <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/releases/tag/20250310"  target="_blank">20250310 版本</a>
+                </li>
+            </ul>
+ 
+            <div class="warning">
+                <strong>配置测试说明：</strong>
+                <p>测试时会在配置中添加 <code>&lt;die reason="服务器正在维护..."&gt;</code> 标签，该标签会阻止服务器启动，测试完成后请及时移除。</p>
+            </div>
+ 
+            <h2 id="faq">常见问题</h2>
+            <h3>1. systemctl 服务管理</h3>
+            <pre># 获取服务模板 
+cp inspircd.service  /etc/systemd/system/
+systemctl daemon-reload</pre>
+            <p>替代方案：直接使用 root 用户执行 <code>inspircd</code> 启动，通过 <code>pkill -f inspircd</code> 终止进程</p>
+ 
+            <h3>2. 权限说明</h3>
+            <ul>
+                <li><strong>NetAdmin</strong>: 服务器级管理权限</li>
+                <li><strong>GlobalOp</strong>: 全局操作员权限</li>
+                <li><strong>Helper</strong>: 技术支持人员权限</li>
+            </ul>
+            <p>权限配置文件路径：<code>/etc/inspircd/conf/opers.conf</code></p> 
+ 
+            <h2 id="config">SSL 配置</h2>
+            <pre># 证书路径变量 
+SSLPath = "/etc/inspircd/ssl/"
+# 实际证书路径示例 
+certfile = "&SSLPath;ca.crt"</pre> 
+            <p>推荐文档：
+                <a href="https://docs.inspircd.org/4/modules/ssl_gnutls"  target="_blank">GnuTLS 配置指南</a> •
+                <a href="https://docs.inspircd.org/4/modules/ssl_openssl"  target="_blank">OpenSSL 配置指南</a>
+            </p>
+ 
+            <h2 id="directory">目录结构</h2>
+            <div class="dir-structure">
+                <pre>/etc/inspircd 
+├── inspircd.conf        # 主配置文件 
+├── ssl/               # SSL证书和模块配置 
+├── conf/              # 常规模块配置 
+│   └── modulesconf.conf  # 插件配置文件 
+└── txt/               # MOTD消息文件</pre>
+            </div>
+ 
+            <h2 id="important">重要提示</h2>
+            <ul>
+                <li>配置文件更新请使用 <code>./config.sh</code></li> 
+                <li>编译安装建议参考官方 <a href="https://github.com/inspircd/inspircd"  target="_blank">GitHub仓库</a></li>
+                <li>问题反馈：<a href="mailto:2qwn2rrds@mozmail.com"> 技术支持邮箱</a></li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
