为ARKFUTURE-NET标题添加ID，以增强页面元素的可访问性

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <hr>
 
     <div>
-        <h1 class="tit">ARKFUTURE-NET</h1>
+        <h1 class="tit" id="ARKFUTURE-NET">ARKFUTURE-NET</h1>
         <div>
             <h2 id="ws">网站 | WEB site</h2>
         <ul>
