--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             <h2>公约 | CONVENTION</h2>
             <p>您需阅读我们的<a href="/ARKFUTURE/ABOUT/arkfuture.md" width="100%" height="150" frameborder="0">公约</a>及<a href="/ARKFUTURE/ABOUT/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p> 
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
-            <a href="#ju">也欢迎各位伙伴加入我们的聊天室进行交流讨论</a>
+            <p>也欢迎加入我们的聊天室进行交流讨论</p>
+            <ul>
+                <li><a href="https://t.me/arkfuture_studio">Telegram:arkfuture</a></li>
+                <li><a href="#irc">IRC:arkfuture_studio</a></li>
+            </ul>
         </div>
     </div>
 
@@ -107,11 +111,7 @@
     <div>
         <h1 class="tit" id="so">社会的 | Community</h1>
     <ul>
-        <p>与运营管理交流</p>
-        <li><a href="https://t.me/arkfuture">Telegram:arkfuture</a></li>
-        <li><a href="#irc">IRC:arkfuture</a></li>
-        <li><a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a></li>
-        <p>订阅我们</p>
+        <p>订阅我们的社交平台</p>
         <li><a href="https://x.com/arkfuturestudio">X</a></li>
         <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
         <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
@@ -176,4 +176,5 @@ INSPIRCD https://www.inspircd.org/
 IRSSI https://irssi.org/
 XiehJ https://hwkj.top/
 In the same way, I would like to thank my dearest Ms. Zhang..
+<a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a>
 -->
