Refactor code structure and remove redundant changes

--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
 			<div id="not_connected_div">
 				<div class="not-connected-text">
 					<h3>Loading | 加载中</h3>
-					<p>You must enable JavaScript to use the client. |</p>
+					<p>You must enable JavaScript to use the client. | 你必须启用js功能才能使用</p>
 				</div>
 			</div>
 		</div>	
@@ -125,10 +125,11 @@
 				</tr>
 				<tr>
 					<td colspan="2">
-						Język interfejsu / UI language &nbsp;
+						UI language | 界面语言&nbsp;
 						<select id="setLanguage" onchange="disp.changeSettings(event)">
 							<option value="pl">Polski</option>
 							<option value="en">English</option>
+							<option value="zh">中文-简体</option>
 						</select>
 					</td>
 				</tr>
@@ -140,7 +141,7 @@
 		</div>
 		
 		<div id="about-dialog" class="language-informationsTitle">
-				<h3>Bramka WWW PIRC.PL</h3>
+				<h3>WWW PIRC.PL</h3>
 				<p><span class="language-version"></span>: <script type="text/javascript">document.write(mainSettings.version);</script></p>
 				<p>&copy; 2010-2020 <a href="http://pirc.pl">PIRC.PL</a>. <span class="language-allRightsReserved"></span></p>
 		</div>
