--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
+            <li><a href="/webirc" id="irc-link"><strong>WebIRC</strong></a></li>
         </ul>
             <p style="color: coral;">进入后请仔细阅读motd</p>
             <p>默认端口连接不上请切换备用端口连接</p>
