--- a/webirc/index.html
+++ b/webirc/index.html
@@ -524,6 +524,7 @@ class WebIRC extends QMainWindow {
         'ConfirmLargePastes': false,
       },
       'servers': { 
+        'ARKFUTURE' : 'wss://IRC.DOMAN:6680',
         'Libera.Chat': 'wss://web.libera.chat/webirc/websocket/',
         'Ergo': 'wss://irc.ergo.chat/webirc',
         'HybridIRC': 'wss://nexus.hybridirc.com:7002',
