更新IRC链接格式，移除冗余的交流部分，优化内容表达

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
                 <li><a href="https://t.me/arkfuture_studio2">Telegram:arkfuture_studio2</a></li>
-                <li><a href="#irc">IRC:arkfuture_studio</a></li>
+                <li><a href="#irc">IRC:#arkfuture_studio</a></li>
+                <li><a href="ircs://irc.libera.chat/#arkfuture_studio">LiberaChat IRC:#arkfuture_studio</a></li>
             </ul>
         </div>
     </div>
@@ -50,16 +51,6 @@
         </div>
     <br>
         <div>
-            <h2 id="ju">交流 | JOIN US</h2>
-        <ul>
-            <li><a href="#irc">!IRC! [#arkfuture_studio]</a></li>
-            <li><a href="https://t.me/arkfuture_studio">Telegram [#arkfuture_studio]</a></li>
-        </ul>
-            <p>聊天消息平台不互通;点击加入</p>     
-            <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>         
-        </div>
-    <br>
-        <div>
             <h2 id="irc">IRC服务 | IRC</h2>
             <p>默认端口:[noSSL:6667/SSL:6697]<br>备用端口:[noSSL:6668,6669/SSL:9999]</p>
         <ul>
@@ -68,10 +59,7 @@
             <li><a href="/webirc" id="irc-link"><strong>WebIRC</strong></a></li>
         </ul>
             <p style="color: coral;">进入后请仔细阅读motd</p>
-            <p>默认端口连接不上请切换备用端口连接</p>
-            <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括otr插件)</p>
-            <p>请访问我们的github中完整的INSPIRCD配置文件</p>
-            <p>请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/HTML/1.markdown.html</p>
     <br>
         <div>
