重构Suricata配置脚本，删除旧脚本并添加新的更新脚本以支持Debian系统

--- a/index.html
+++ b/index.html
@@ -159,11 +159,17 @@
 </html>
 
 <!--
-Thanks
+Thanks:
 ARKFUTURE team/group/studio and Friends
 INSPIRCD https://www.inspircd.org/
-IRSSI https://irssi.org/
 XiehJ https://hwkj.top/
 In the same way, I would like to thank my dearest Ms. Zhang..
 <a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a>
+-->
+
+<!--
+Date: 2025/4/29
+ToDo:
+The configuration files of ergoircd and inspircd are always kept up to date. √
+
 -->
