--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -8,94 +8,100 @@
 </head>
 <!--------------------> 
 <body>
-<h2>快链 -- 往下滑</h2>
-<p>使用方法:把搜索内容放到框里，点击搜索按钮即可</p>
+<h2>秒搜</h2>
+<p>使用方法:把搜索内容/参数放到框里，点击搜索按钮即可</p>
 <br>
 <h2>搜索引擎</h2>
 
-    <form action="https://www.baidu.com/s" target="_blank">
-        <input type="text" name="wd" size="30" autocomplete="off" placeholder="搜索(当前使用-Baidu)">
+    <form method="GET" action="https://www.baidu.com/s" target="_blank">
+        <input type="text" name="wd" size="30" autocomplete="off" placeholder="百度/Baidu">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://kaifa.baidu.com/searchPage" target="_blank">
-        <input type="text" name="wd" size="30" autocomplete="off" placeholder="百度开发者搜索/Baidu">
+    <form method="GET" action="https://cn.bing.com/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="必应/Bing">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://github.com/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="男性交友网站/Github">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-
-    <form action="https://www.google.com/search" target="_blank">
+    <form method="GET" action="https://www.google.com/search" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="谷歌/GOOGLE">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://www.ecosia.org/search" target="_blank">
+    <form method="GET" action="https://www.ecosia.org/search" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="公益搜索/ECOSIA">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://yandex.com/search" target="_blank">
+    <form method="GET" action="https://yandex.com/search" target="_blank">
         <input type="text" name="text" size="30" autocomplete="off" placeholder="俄罗斯搜索/YANDEX">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://duckduckgo.com" target="_blank">
+    <form method="GET" action="https://duckduckgo.com" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="鸭鸭/DuckDuckgo">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
 <p>tor搜索</p>
 
-    <form action="http://tordexu73joywapk2txdr54jed4imqledpcvcuf75qsas2gwdgksvnyd.onion/search" target="_blank">
+    <form method="GET" action="http://tordexu73joywapk2txdr54jed4imqledpcvcuf75qsas2gwdgksvnyd.onion/search" target="_blank">
         <input type="text" name="query" size="30" autocomplete="off" placeholder="TorDex">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="http://ondexcylxxxq6vcc62l3r2m6rypohvvymsvqeadhln5mjo73pf6ksjad.onion" target="_blank">
+    <form method="GET" action="http://ondexcylxxxq6vcc62l3r2m6rypohvvymsvqeadhln5mjo73pf6ksjad.onion" target="_blank">
         <input type="text" name="query" size="30" autocomplete="off" placeholder="OnDex">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://onionlandsearchengine.net/search" target="_blank">
+    <form method="GET" action="https://onionlandsearchengine.net/search" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="ONIONLANDSEARCHENGINE">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://tor.link/" target="_blank">
+    <form method="GET" action="https://tor.link/" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="TOR.LINK">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
 <p>xdcc搜索</p>
 
-    <form action="https://www.xdcc.eu/search.php" target="_blank">
+    <form method="GET" action="https://www.xdcc.eu/search.php" target="_blank">
         <input type="text" name="searchkey" size="30" autocomplete="off" placeholder="xdcc.eu 搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://sunxdcc.com/deliver.php" target="_blank">
+    <form method="GET" action="https://sunxdcc.com/deliver.php" target="_blank">
         <input type="text" name="sterm" size="30" autocomplete="off" placeholder="sunxdcc 搜索 元数据">
         <input type="text" name="page" size="30" autocomplete="off" placeholder="页数">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+<p>软件包</p>
+    <form method="GET" action="https://packages.debian.org/search" target="_blank">
+        <input type="text" name="keywords" size="30" autocomplete="off" placeholder="Debian软件包查找 关键字">
+        <input type="text" name="searchon" size="30" autocomplete="off" value="names" placeholder="查找类别:默认包名匹配">
+        <input type="text" name="suite" size="30" autocomplete="off" value="bookworm" placeholder="系统代号:默认bookworm">
+        <input type="text" name="section" size="30" autocomplete="off" value="all" placeholder="查找类别:默认所有">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
+
+
 <p>学术/论文搜索</p>
 
-    <form action="https://www.scirp.org/journal/articles.aspx" target="_blank">
+    <form method="GET" action="https://www.scirp.org/journal/articles.aspx" target="_blank">
         <input type="text" name="searchcode" size="30" autocomplete="off" placeholder="Scirp/科研出版社">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://search.scielo.org" target="_blank">
+    <form method="GET" action="https://search.scielo.org" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="Scielo/科学在线图书馆">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://arxiv.org/search/" target="_blank">
+    <form method="GET" action="https://arxiv.org/search/" target="_blank">
         <input type="text" name="query" size="30" autocomplete="off" placeholder="Arxiv/预印本平台">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
@@ -103,27 +109,27 @@
 <br>
 <h2>资产测绘平台(所有的都需要登录)</h2>
 
-    <form action="https://www.cve.org/CVERecord" target="_blank">
+    <form method="GET" action="https://www.cve.org/CVERecord" target="_blank">
         <input type="text" name="id" size="30" autocomplete="off" placeholder="通用漏洞披露/CVE">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://x.threatbook.com/v5/generalSearch" target="_blank">
+    <form method="GET" action="https://x.threatbook.com/v5/generalSearch" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="微步在线">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://quake.360.net/quake/#/searchResult" target="_blank">
+    <form method="GET" action="https://quake.360.net/quake/#/searchResult" target="_blank">
         <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360夸克">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://www.shodan.io/search" target="_blank">
+    <form method="GET" action="https://www.shodan.io/search" target="_blank">
         <input type="text" name="query" size="30" autocomplete="off" placeholder="SouDan">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://www.onyphe.io/search" target="_blank">
+    <form method="GET" action="https://www.onyphe.io/search" target="_blank">
         <input type="text" name="q" size="30" autocomplete="off" placeholder="Onyphe">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
@@ -131,17 +137,17 @@
 <br>
 <h2>视频逃逸</h2>
 
-    <form action="https://jx.xmflv.com/" target="_blank">
+    <form method="GET" action="https://jx.xmflv.com/" target="_blank">
         <input type="text" name="url" size="30" autocomplete="off" placeholder="1">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://jx.playerjy.com/" target="_blank">
+    <form method="GET" action="https://jx.playerjy.com/" target="_blank">
         <input type="text" name="url" size="30" autocomplete="off" placeholder="3">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://jx.playerjy.com/" target="_blank">
+    <form method="GET" action="https://jx.playerjy.com/" target="_blank">
         <input type="text" name="jx" size="30" autocomplete="off" placeholder="特殊解析">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
@@ -149,22 +155,17 @@
 <br>
 <h2>英汉词典</h2>
 
-    <form action="https://www.iciba.com/word" target="_blank">
+    <form method="GET" action="https://www.iciba.com/word" target="_blank">
         <input type="text" name="w" size="30" autocomplete="off" placeholder="金山词霸">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://youdao.com/result"_blank">
-        <input type="text" name="word" size="30" autocomplete="off" placeholder="有道">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-
-    <form action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
+    <form method="GET" action="http://wordnetweb.princeton.edu/perl/webwn" target="_blank">
         <input type="text" name="s" size="30" autocomplete="off" placeholder="WordNet词典">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form action="https://www.urbandictionary.com/define.php"_blank">
+    <form method="GET" action="https://www.urbandictionary.com/define.php"_blank">
         <input type="text" name="term" size="30" autocomplete="off" placeholder="城市英语词典(俚语)">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
@@ -172,19 +173,16 @@
 <br>
 <h2>电台搜索,使用radio-browser.info</h2>
 
-<form action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
+<form method="GET" action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
     <input type="text" name="name" size="30" autocomplete="off" placeholder="电台名字搜索">
-    <input type="submit" value="搜索"><i><--点击</i>
-</form>
-
-<form action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
     <input type="text" name="order" size="30" autocomplete="off" placeholder="混沌搜索(搜啥都行)">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
 
-<form action="http://at1.api.radio-browser.info/xml/stations/byuuid "_blank">
+<form method="GET" action="http://at1.api.radio-browser.info/xml/stations/byuuid "_blank">
     <input type="text" name="uuids" size="30" autocomplete="off" placeholder="uuid搜索">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
+
 </body>
 </html>
