--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -73,16 +73,16 @@
     </form>
 
     <form method="GET" action="https://sunxdcc.com/deliver.php" target="_blank">
-        <input type="text" name="sterm" size="30" autocomplete="off" placeholder="sunxdcc 搜索 元数据">
+        <input type="text" name="sterm" size="30" autocomplete="off" placeholder="sunxdcc 搜索 元数据"><br>
         <input type="text" name="page" size="30" autocomplete="off" placeholder="页数">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
 <p>软件包</p>
     <form method="GET" action="https://packages.debian.org/search" target="_blank">
-        <input type="text" name="keywords" size="30" autocomplete="off" placeholder="Debian软件包查找 关键字">
-        <input type="text" name="searchon" size="30" autocomplete="off" value="names" placeholder="查找类别:默认包名匹配">
-        <input type="text" name="suite" size="30" autocomplete="off" value="bookworm" placeholder="系统代号:默认bookworm">
+        <input type="text" name="keywords" size="30" autocomplete="off" placeholder="Debian软件包查找 关键字"><br>
+        <input type="text" name="searchon" size="30" autocomplete="off" value="names" placeholder="查找类别:默认包名匹配"><br>
+        <input type="text" name="suite" size="30" autocomplete="off" value="bookworm" placeholder="系统代号:默认bookworm"><br>
         <input type="text" name="section" size="30" autocomplete="off" value="all" placeholder="查找类别:默认所有">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
@@ -174,7 +174,7 @@
 <h2>电台搜索,使用radio-browser.info</h2>
 
 <form method="GET" action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
-    <input type="text" name="name" size="30" autocomplete="off" placeholder="电台名字搜索">
+    <input type="text" name="name" size="30" autocomplete="off" placeholder="电台名字搜索"><br>
     <input type="text" name="order" size="30" autocomplete="off" placeholder="混沌搜索(搜啥都行)">
     <input type="submit" value="搜索"><i><--点击</i>
 </form>
