--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -87,6 +87,12 @@
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
+    <form method="GET" action="https://packages.msys2.org/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="Msys2软件包查找 关键字"><br>
+        <input type="text" name="t" size="30" autocomplete="off" value="pkg" placeholder="查找类别,参数:pkg | binpkg"><br>
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+
 
 
 <p>学术/论文搜索</p>
