--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -2,13 +2,13 @@
 <html> 
 <head>
 <!--------进入加载项----------> 
-<title>快链</title>
+<title>快速搜索</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <!--------------------> 
 <body>
-<h2>秒搜</h2>
+<h2>快速搜索</h2>
 <p>使用方法:把搜索内容/参数放到框里，点击搜索按钮即可</p>
 <br>
 <h2>搜索引擎</h2>
