更新link.html，修改页面标题为“常用连接”以提升一致性

--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -10,6 +10,7 @@
 <body>
 <h2>快速搜索</h2>
 <p>使用方法:把搜索内容/参数放到框里，点击搜索按钮即可</p>
+<p>注意: 新增连接 搜索参数失效 联系邮箱:pbp9wdep2@mozmail.com</p>
 <br>
 <h2>搜索引擎</h2>
     <form method="GET" action="https://www.baidu.com/s" target="_blank">
@@ -78,7 +79,7 @@
     </form>
     <br>
 
-<p>软件包</p>
+<p>软件包搜索</p>
     <form method="GET" action="https://packages.debian.org/search" target="_blank">
         <input type="text" name="keywords" size="30" autocomplete="off" placeholder="Debian软件包查找 关键字"><br>
         <input type="text" name="searchon" size="30" autocomplete="off" value="names" placeholder="查找类别:默认包名匹配"><br>
@@ -112,8 +113,8 @@
     <br>
 
 <h2>资产测绘平台(所有的都需要登录)</h2>
-    <form method="GET" action="https://www.cve.org/CVERecord" target="_blank">
-        <input type="text" name="id" size="30" autocomplete="off" placeholder="通用漏洞披露/CVE">
+    <form method="GET" action="https://www.cve.org/CVERecord/SearchResults" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="通用漏洞披露/CVE">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
