--- a/ARKFUTURE/HTML/link.html
+++ b/ARKFUTURE/HTML/link.html
@@ -3,7 +3,7 @@
 
 <!-- head -->
 <head>
-    <title>ARKFUTURE</title>
+    <title>常用连接</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="">
@@ -12,7 +12,7 @@
 <!-- body -->
 <body>
     <div>
-        <h2 class="tit">链接|Link -- 往下滑</h2>
+        <h2 class="tit">常用连接</h2>
         <p>这个条目是展示一些链接,这些链接为随时随地使用而准备</p>
         <p>这些链接都是公开的,展示链接不代表我们跟某个团体或公司合作</p>
         <p>请右击->复制链接, 然后粘贴使用</p>
