--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div style="text-align: center;">
-        <h1 class="LM">ARKFUTURE</h1>
+        <h1 class="LM" id="LM">ARKFUTURE</h1>
     </div>
 
     <div>
@@ -138,7 +138,7 @@
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
-        <p>团队所使用的系统:{<br>红蓝对抗:Parrotsec,Kali,blackarch;<br>隐私:Tails,Qubes;<br>OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux<br>}</p>
+        <br><p>团队所使用的系统:{<br>红蓝对抗:Parrotsec,Kali,blackarch;<br>隐私:Tails,Qubes;<br>OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux<br>}</p>
 
     </div>
 
