--- a/index.html
+++ b/index.html
@@ -128,12 +128,15 @@
         <h1 class="tit">结束语|END</h1>
 
         <p>我们崇尚黑客精神</p>
-        <pre>
-            黑客精神Hacker,这个词是用来形容那些热衷于解决问题,克服限制的人.
-
-            "任何职业都可以成为黑客.你可以是一个木匠黑客.不一定是高科技.只要与技能有关.并且倾心专注于你正在做的事情.你就可能成为黑客."
-                                                                                ----引自《黑客伦理与信息时代精神》
-        </pre>
+        <blockquote class="hacker-quote">
+            <p>黑客精神(Hacker)，这个词是用来形容那些热衷于解决问题、克服限制的人。</p>
+            
+            <p>"任何职业都可以成为黑客。你可以是一个木匠黑客。不一定是高科技。只要与技能有关，并且倾心专注于你正在做的事情，你就可能成为黑客。"</p>
+            
+            <footer>
+                <cite>引自《黑客伦理与信息时代精神》</cite>
+            </footer>
+        </blockquote>
         <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
