--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <hr>
 
         <div>
-            <h1 class="tit" id="so">社会的 | Community</h1>
+            <h1 class="tit" id="so">社会的 | Social</h1>
             <ul>
                 <p>订阅我们的社交平台</p>
                 <li><a href="https://x.com/arkfuturestudio">X</a></li>
@@ -111,7 +111,7 @@
         <hr>
 
         <div>
-            <h1 class="tit" id="li">许可证|Licenses</h1>
+            <h1 class="tit" id="li">许可证 | Licenses</h1>
             <ul>
                 <li><a href="https://www.gnu.org/licenses/">GNU开源许可</a></li>
                 <li><a href="https://creativecommons.org/licenses/">CC知识许可</a></li>
@@ -125,7 +125,7 @@
         <hr>
 
         <div>
-            <h1 class="tit">结束语|END</h1>
+            <h1 class="tit">结束语 | END</h1>
 
             <p>我们崇尚黑客精神</p>
             <blockquote>
