--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
-    <script src="/js.js"></script>
+    <script src="/js.js"  defer></script>
 </head>
 
 <!-- body -->
