--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h2 id="pv">代理 | PROXY & VPN</h2>
                 <p>VPN使用SoftEtherVPN</p>
                 <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-                <p>我们假设我们的代理(proxy)服务器是:192.168.0.2, 那么配置文件是--</p>
+                <p>我们假设我们的代理(proxy)服务器是:192.168.0.2, 那么配置文件是:</p>
                 <ul>
                     <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
                 </ul>
