--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1 class="tit">关于 | About</h1>
         <div>
             <h2>公约 | CONVENTION</h2>
-            <p>您需阅读我们的<a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">公约</a>及<a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p>100
+            <p>您需阅读我们的<a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">公约</a>及<a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p>
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
