--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             </ul>
             <p style="color: coral;">进入后请仔细阅读motd</p>
             <p>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p>搭建您自己irc服务器:https://arkfuture.github.io/ARKFUTURE/HTML/1.markdown.html</p>
             <br>
             <div>
                 <h2 id="pv">代理 | PROXY & VPN</h2>
@@ -88,6 +87,7 @@
                 <ul>
                     <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
                     <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
+                    <li><a href="/ARKFUTURE/HTML/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
                     <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
                 </ul>
             </div>
