--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
                 <li><a href="/webirc" id="irc-link"><strong>WebIRC</strong></a></li>
             </ul>
-            <p style="color: coral;">进入后请仔细阅读motd</p>
+            <p>* 进入后请仔细阅读motd *</p>
             <p>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <br>
             <div>
