--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -20,12 +20,12 @@
         <p>请单机下载</p>
 
         <div>
-            <h2>连接 支持的版本</h2>
-            <a href="../CONFIG/i2pd/i2pd.conf">i2pd Latest</a>
-            <a href="../CONFIG/inspircd/README.md">inspircd Latest</a>
-            <a href="../CONFIG/ergoircd/ircd.yaml">ergoircd Latest</a>
-            <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest</a>
-            <a href="../CONFIG/other/irssi.conf">irssi Latest</a>
+            <h2>名称 支持的版本</h2>
+            <a href="../CONFIG/i2pd/i2pd.conf">i2pd Latest</a><br>
+            <a href="../CONFIG/inspircd/README.md">inspircd Latest</a><br>
+            <a href="../CONFIG/ergoircd/ircd.yaml">ergoircd Latest</a><br>
+            <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest</a><br>
+            <a href="../CONFIG/other/irssi.conf">irssi Latest</a><br>
             <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest</a>
         </div>
 
