--- a/ARKFUTURE/HTML/link.html
+++ b/ARKFUTURE/HTML/link.html
@@ -19,35 +19,35 @@
 
         <div>
             <h2>系统连接</h2>
-            <a href="https://parrotsec.org">ParrotSec</a>
-            <a href="https://blackarch.org">BlackArch</a>
-            <a href="https://www.debian.org">Debian</a>
-            <a href="https://www.openmediavault.org">OpenMediaVault</a>
-            <a href="https://uupdump.net">UUP dump</a>
+            <a href="https://parrotsec.org">ParrotSec</a><br>
+            <a href="https://blackarch.org">BlackArch</a><br>
+            <a href="https://www.debian.org">Debian</a><br>
+            <a href="https://www.openmediavault.org">OpenMediaVault</a><br>
+            <a href="https://uupdump.net">UUP dump</a><br>
             <a href="https://openwrt.org/">OpenWrt</a>
         </div>
         <br>
         <div>
             <h2>NTP授时服务器</h2>
-            <a href="ntp.ntsc.ac.cn">国家授时中心 NTP 服务器</a>
-            <a href="cn.ntp.org.cn">中国 NTP 快速授时服务</a>
+            <a href="ntp.ntsc.ac.cn">国家授时中心 NTP 服务器</a><br>
+            <a href="cn.ntp.org.cn">中国 NTP 快速授时服务</a><br>
             <a href="edu.ntp.org.cn">中国教育网专用NTP</a>
         </div>
         <br>
         <div>
             <h2>Tracker 这个作为bt种子的下载服务器</h2>
-            <a href="http://opentrackr.org">OPENTRACKER</a>
+            <a href="http://opentrackr.org">OPENTRACKER</a><br>
             <a href="https://trackerslist.com">TRACKERSLIST</a>
         </div>
         <br>
         <div>
             <h2>私人DNS</h2>
             <p>DoT(DNS over TLS,仅限域名)</p>
-            <a href="dns.alidns.com">阿里云 DoT</a>
-            <a href="dot.pub">腾讯云 DoT</a>
-            <a href="1dot1dot1dot1.cloudflare-dns.com">Cloudflare DoT</a>
+            <a href="dns.alidns.com">阿里云 DoT</a><br>
+            <a href="dot.pub">腾讯云 DoT</a><br>
+            <a href="1dot1dot1dot1.cloudflare-dns.com">Cloudflare DoT</a><br>
             <p>DoH(DNS Over HTTPS)</p>
-            <a href="https://1.0.0.1/dns-query">Cloudflare DoH</a>
+            <a href="https://1.0.0.1/dns-query">Cloudflare DoH</a><br>
             <a href="https://doh.opendns.com/dns-query">Opendns DoH</a>
         </div>
     </div>
